cluster/kustomizations/monitoring/grafana/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-postgres-service
  labels:
    app: postgres
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 5432
  selector:
    app: postgres
